@@ -20,6 +20,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2022-02-02 [B] Handle failure to get image dimensions in thumb updater tool {ron4mac}
 2021-11-22 [B] Allow ratings from different logged in users regardless of IP address {ron4mac}
 2021-11-20 [M] Update third party (ZenPhoto maintained) exif reader {ron4mac}
 2021-11-15 [M] Change bridge file for SMF 2.1 to function with latest SMF version {ron4mac}
